1.33v

1. New permission for chat, now operators can have or not permission to open already opened chats. This disables reading other persons chats. Except for users who have permission.
This permission takes effect only if user does not have permission to all chats.
2. Leave a message functionality


1.32v

1. Chatbox/Shoutbox module.
2. Option to embed Chat, Shoutbox directly in page.

execute doc/update_db/update_22.sql

1.31v

Feature release:
1. Option to pass custom argument for chat, these arguments will be visible in chat form
Example:
<script type="text/javascript">
var LHCChatOptions = {};
LHCChatOptions.attr = new Array();
LHCChatOptions.attr.push({'name':'Basket id','value':'<predefined value>','type':'text','size':12}); // 12 is 100% full row, 6 is 50%
LHCChatOptions.attr.push({'name':'User ID','value':'<predefined value>','type':'hidden','size':0}); // hidden is invisible field, size just zero
(function() {
var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
po.src = 'http://<some_domain>/index.php/chat/getstatus/(position)/middle_right';
var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
})();
</script>
2. Option to prefill some form attributes in javascript
<script type="text/javascript">
LHCChatOptions.attr_prefill = new Array();
LHCChatOptions.attr_prefill.push({'name':'email','value':'remdex@gmail.com'});
LHCChatOptions.attr_prefill.push({'name':'phone','value':'370888888'});
LHCChatOptions.attr_prefill.push({'name':'username','value':'Remigijus Kiminas'});
(function() {
var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
po.src = 'http://<some_domain>/index.php/chat/getstatus/(position)/middle_right';
var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
})();
</script>
3. Option to configure chat popup window width and height, same for chat widget also.