@@ -292,7 +292,7 @@ switch ((int)$Params['user_parameters']['step_id']) {
 
         	   $db->query("INSERT INTO `lh_abstract_email_template` (`id`, `name`, `from_name`, `from_name_ac`, `from_email`, `from_email_ac`, `content`, `subject`, `subject_ac`, `reply_to`, `reply_to_ac`, `recipient`) VALUES
         	   		(1,'Send mail to user','Live Support',0,'',0,'Dear {user_chat_nick},\r\n\r\n{additional_message}\r\n\r\nLive Support response:\r\n{messages_content}\r\n\r\nSincerely,\r\nLive Support Team\r\n','{name_surname} has responded to your request',	1,'',1,''),
-        	   		(2,	'Support request from user',	'',	0,	'',	0,	'Hello,\r\n\r\nUser request data:\r\nName: {name}\r\nEmail: {email}\r\nPhone: {phone}\r\nIP: {ip}\r\n\r\nMessage:\r\n{message}\r\n\r\nAdditional data, if any:\r\n{additional_data}\r\n\r\nURL of page from which user has send request:\r\n{url_request}\r\n\r\nSincerely,\r\nLive Support Team',	'Support request from user',	0,	'',	0,	'{$adminEmail}');");
+        	   		(2,'Support request from user',	'',	0,	'',	0,	'Hello,\r\n\r\nUser request data:\r\nName: {name}\r\nEmail: {email}\r\nPhone: {phone}\r\nIP: {ip}\r\n\r\nMessage:\r\n{message}\r\n\r\nAdditional data, if any:\r\n{additional_data}\r\n\r\nURL of page from which user has send request:\r\n{url_request}\r\n\r\nSincerely,\r\nLive Support Team',	'Support request from user',	0,	'',	0,	'{$adminEmail}');");
 
         	   $db->query("CREATE TABLE `lh_question` (
         	   `id` int(11) NOT NULL AUTO_INCREMENT,
@@ -621,9 +621,9 @@ switch ((int)$Params['user_parameters']['step_id']) {
                     array('module' => 'lhchat',  'function' => 'allowtransfer'),
                     array('module' => 'lhchat',  'function' => 'administratecannedmsg'),
                     array('module' => 'lhquestionary',  'function' => 'manage_questionary'),
-                    array('module' => 'lhfaq',   'function' => 'manage_faq'),
-                    array('module' => 'lhchatbox',   'function' => 'manage_chatbox'),
-                    array('module' => 'lhxml',   'function' => '*')
+                    array('module' => 'lhfaq',   		'function' => 'manage_faq'),
+                    array('module' => 'lhchatbox',   	'function' => 'manage_chatbox'),
+                    array('module' => 'lhxml',   		'function' => '*')
                 );
 
                 foreach ($permissionsArray as $paramsPermission) {
